# flutter_micro_ecc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/swanav/flutter_micro_ecc/: FlutterMicroEccPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/swanav/flutter_micro_ecc_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Flutter/: GeneratedPluginRegistrant.swift
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: flutter_micro_ecc.podspec
ios/Classes/: FlutterMicroEccPlugin.h  FlutterMicroEccPlugin.m  SwiftFlutterMicroEccPlugin.swift
ios/Classes/micro_ecc/: CMakeLists.txt  uECC.h
lib/: ecdh.dart  flutter_micro_ecc.dart
lib/bindings/: micro_ecc.bindings.g.dart
lib/src/: ecdh.dart
macos/: flutter_micro_ecc.podspec
macos/Classes/: FlutterMicroEccPlugin.h  FlutterMicroEccPlugin.swift  SwiftFlutterMicroEccPlugin.swift
macos/Classes/micro_ecc/: uECC.c
test/: flutter_micro_ecc_test.dart
